<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/studentInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/project_info_title"
        app:layout_constraintBottom_toTopOf="@+id/nameInfo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="75dp"
        android:text="@string/student_info_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="75dp"
        android:text="@string/student_data_name"
        app:layout_constraintStart_toEndOf="@+id/nameInfo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/surnameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:text="@string/student_info_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInfo" />

    <TextView
        android:id="@+id/surnameData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/student_data_surname"
        app:layout_constraintStart_toEndOf="@+id/surnameInfo"
        app:layout_constraintTop_toBottomOf="@+id/nameData" />

    <TextView
        android:id="@+id/studentPlanInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:text="@string/student_info_plan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameInfo" />

    <TextView
        android:id="@+id/studentPlanData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/student_data_plan"
        app:layout_constraintStart_toEndOf="@+id/studentPlanInfo"
        app:layout_constraintTop_toBottomOf="@+id/surnameData" />

    <Button
        android:id="@+id/mainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/main_button_text"
        android:onClick="goToListActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>